[package]
name = "markov"
version = "0.1.0"
authors = ["Douglas Luman <dluman@douglasjluman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
mersenne_twister = "1.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[[bin]]
name = "markov"
path = "src/markov.rs"
